--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<div class="container">
+<div class="container" style="opacity: 0.7;">
     <br />
     <br />
     <br />
@@ -118,6 +118,7 @@
 
         <div class="col-3"></div>
     </div>
+
     <br />
     <br /> <br />
     <br /> <br />
