--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -10,7 +10,7 @@
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
 
             <div class="col text-center">
                 <img src="@imageService.DecodeFileAvatar(Model.Input.ImageData,Model.Input.ContentType)" class="rounded-circle" style="width:30%" />
