--- a/Views/Home/ManageRole.cshtml
+++ b/Views/Home/ManageRole.cshtml
@@ -13,51 +13,71 @@
     var users = new MultiSelectList(userManager.Users, "Id", "FullName");
     var roles = new SelectList(roleService.NonDemoRoles(), "Name", "Name");
 }
+<div class="container-fluid pl-3">
+    <h1>Manage Role</h1>
+    <div class="row">
+        <div class="col">
+            <form asp-action="ManageRole" method="post">
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col">
+                            <div class="card card-default">
+                                <div class="card-body" style="padding:0;">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="form-group">
 
-<h1>Manage Role</h1>
-<div class="row">
-    <div class="col">
-        <form asp-action="ManageRole" method="post">
-            <div class="form-group">
-                <div class="row">
-                    <div class="col">
-                        <select size="30" class="form-control"  name="userId" multiple="multiple" asp-items="@users"></select>
-                    </div>
-                    <div class="col">
-                        <select class="form-control" name="role" asp-items="@roles"></select>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col">
-                        <button type="submit" class="btn btn-secondary form-control">Add</button>
-                    </div>
-                </div>
-            </div> 
-        </form>
-    </div>
-    <div class="col">
-        @foreach (var user in people)
-        {
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="col">@user.FullName</div>
-                <div class="col"></div>
-                <div class="col-3">
-                   
-                    @foreach (var roless in (await roleService.ListUserRoleAsync(user)))
-                    {
-                        <div class="row">
-                            @roless
+                                                <select class="duallistbox" size="30" multiple="multiple" name="userId" asp-items="@users"></select>
+                                            </div>
+                                            <!-- /.form-group -->
+                                        </div>
+                                        <!-- /.col -->
+                                    </div>
+                                    <!-- /.row -->
+                                </div>
+                                <!-- /.card-body -->
+                            </div>
                         </div>
-                    }
+                        <div class="col-3">
+                            <div class="form-group">
+                                <select class="form-control  select2bs4" style="width: 100%;" name="role" asp-items="@roles"></select>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col">
+                            <button type="submit" class="btn btn-secondary form-control">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col-5">
+            @foreach (var user in people)
+            {
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">@user.FullName</div>
+                    <div class="col"></div>
+                    <div class="col-3">
+
+                        @foreach (var roless in (await roleService.ListUserRoleAsync(user)))
+                        {
+                            <div class="row">
+                                @roless
+                            </div>
+                        }
+
+                    </div>
+                    <div class="col-1"></div>
 
                 </div>
-                <div class="col-1"></div>
-
-            </div>
-            <hr />
-        }
+                <hr />
+            }
+        </div>
     </div>
 </div>
+
