--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,53 +5,81 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 @using BugTracker.Service
+@using BugTracker.Services
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<CustomUser> SignInManager
+@inject UserManager<CustomUser> UserManager
 @inject IImageService imageService
-<h4>@ViewData["Title"]</h4>
+@inject ICustomRoleService roleService
+
+@{ 
+    var user = await UserManager.GetUserAsync(User);
+    var roles = await roleService.ListUserRoleAsync(user);
+}
+
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post" enctype="multipart/form-data">
+        <div class="card card-primary card-outline">
+            <div class="card-body box-profile">
 
-            <div class="col text-center">
-                <img src="@imageService.DecodeFileAvatar(Model.Input.ImageData,Model.Input.ContentType)" class="rounded-circle" style="width:30%" />
-            </div>
+                <form id="profile-form" method="post" enctype="multipart/form-data">
+                    <div class="text-center">
+                        <img class="profile-user-img img-fluid img-circle" style="width:30%;"
+                             src="@imageService.DecodeFileAvatar(Model.Input.ImageData,Model.Input.ContentType)"
+                             alt="User profile picture">
+                    </div>
+                    <h3 class="profile-username text-center">@(user.FullName)</h3>
+                    @foreach (var role in roles.ToList())
+                    {
 
-            @if (Model.Input.ImageData != null && Model.Input.ContentType != null)
-            {
-                <input type="hidden" name="imageData" value="@Convert.ToBase64String(Model.Input.ImageData)" class="form-control" />
-                <input type="hidden" name="contentType" value="@Model.Input.ContentType" class="form-control" />
-            }
+                        <p class="text-muted text-center">@role</p>
 
-            <div class="form-group">
-                <label asp-for="Input.ImageData" class="control-label"></label>
-                <input type="file" name="image" />
-                <span asp-validation-for="Input.ImageData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.FirstName"></label>
-                <input asp-for="Input.FirstName" value="@Model.Input.FirstName" class="form-control" />
-                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.LastName"></label>
-                <input asp-for="Input.LastName" value="@Model.Input.LastName" class="form-control" />
-                <span asp-validation-for="Input.LastName" class="text-danger"></span>
-            </div>
+                    }
 
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
+                    @if (Model.Input.ImageData != null && Model.Input.ContentType != null)
+                    {
+                        <input type="hidden" name="imageData" value="@Convert.ToBase64String(Model.Input.ImageData)" class="form-control" />
+                        <input type="hidden" name="contentType" value="@Model.Input.ContentType" class="form-control" />
+                    }
+            
+                    <div class="form-group">
+                        <label asp-for="Input.ImageData" class="control-label"></label>
+                        <input type="file" name="image" />
+                        <span asp-validation-for="Input.ImageData" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.FirstName"></label>
+                        <input asp-for="Input.FirstName" value="@Model.Input.FirstName" class="form-control" />
+                        <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.LastName"></label>
+                        <input asp-for="Input.LastName" value="@Model.Input.LastName" class="form-control" />
+                        <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                    </div>
+
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Username"></label>
+                        <input asp-for="Username" class="form-control" disabled />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.PhoneNumber"></label>
+                        <input asp-for="Input.PhoneNumber" class="form-control" />
+                        <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                    </div>
+                    <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+                </form>
+
+
             </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
-        </form>
+            <!-- /.card-body -->
+        </div>
+        <!-- /.card -->
     </div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
