update demo login

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -138,7 +138,11 @@
                 </div>
                 <div class="row">
                     <div class="col text-center">
-                        <a class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Admin</a>
+                        <form id="account" method="post">
+                            <input type="hidden" asp-for="Input.Email" value="demoadmin@gmail.com" class="form-control" />
+                            <input type="hidden" asp-for="Input.Password" value="Nhoclanro1!" class="form-control" />
+                            <button type="submit" class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Admin</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -157,7 +161,11 @@
                 </div>
                 <div class="row">
                     <div class="col text-center">
-                        <a class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo PM</a>
+                        <form id="account" method="post">
+                            <input type="hidden" asp-for="Input.Email" value="demopm@gmail.com" class="form-control" />
+                            <input type="hidden" asp-for="Input.Password" value="Nhoclanro1!" class="form-control" />
+                            <button type="submit" class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo PM</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -176,7 +184,11 @@
                 </div>
                 <div class="row">
                     <div class="col text-center">
-                        <a class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Developer</a>
+                        <form id="account" method="post">
+                            <input type="hidden" asp-for="Input.Email" value="demodev@gmail.com" class="form-control" />
+                            <input type="hidden" asp-for="Input.Password" value="Nhoclanro1!" class="form-control" />
+                            <button type="submit" class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Developer</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -195,7 +207,11 @@
                 </div>
                 <div class="row">
                     <div class="col text-center">
-                        <a class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Submitter</a>
+                        <form id="account" method="post">
+                            <input type="hidden" asp-for="Input.Email" value="demosub@gmail.com" class="form-control" />
+                            <input type="hidden" asp-for="Input.Password" value="Nhoclanro1!" class="form-control" />
+                            <button type="submit" class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Submitter</button>
+                        </form>
                     </div>
                 </div>
             </div>
